[gd_scene load_steps=6 format=1]

[ext_resource path="res://Root.gd" type="Script" id=1]
[ext_resource path="res://sprites/GardenTiles.tres" type="TileSet" id=2]
[ext_resource path="res://sprites/tile-cursor-black.png" type="Texture" id=3]
[ext_resource path="res://scripts/Sim.gd" type="Script" id=4]
[ext_resource path="res://scripts/UI.gd" type="Script" id=5]

[node name="Root" type="Node2D"]

script/script = ExtResource( 1 )

[node name="WorldMap" type="TileMap" parent="."]

mode = 0
tile_set = ExtResource( 2 )
cell/size = Vector2( 32, 32 )
cell/quadrant_size = 16
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 1
cell/y_sort = false
collision/use_kinematic = false
collision/friction = 1.0
collision/bounce = 0.0
collision/layers = 1
collision/mask = 1
occluder/light_mask = 1
tile_data = IntArray( 0, 2, 1, 2, 2, 2, 3, 2, 4, 2, 5, 2, 6, 2, 7, 2, 8, 2, 9, 2, 10, 2, 11, 2, 12, 2, 13, 2, 14, 2, 15, 2, 16, 2, 17, 2, 18, 2, 19, 2, 20, 2, 21, 2, 22, 2, 23, 2, 24, 2, 25, 2, 26, 2, 27, 2, 28, 2, 29, 2, 30, 2, 31, 2, 65536, 2, 65537, 2, 65538, 2, 65539, 2, 65540, 2, 65541, 2, 65542, 2, 65543, 2, 65544, 2, 65545, 2, 65546, 2, 65547, 2, 65548, 2, 65549, 2, 65550, 2, 65551, 2, 65552, 2, 65553, 2, 65554, 2, 65555, 2, 65556, 2, 65557, 2, 65558, 2, 65559, 2, 65560, 2, 65561, 2, 65562, 2, 65563, 2, 65564, 2, 65565, 2, 65566, 2, 65567, 2, 131072, 2, 131073, 2, 131074, 2, 131075, 2, 131076, 2, 131077, 2, 131078, 2, 131079, 2, 131080, 2, 131081, 2, 131082, 2, 131083, 2, 131084, 2, 131085, 2, 131086, 2, 131087, 2, 131088, 2, 131089, 2, 131090, 2, 131091, 2, 131092, 2, 131093, 2, 131094, 2, 131095, 2, 131096, 2, 131097, 2, 131098, 2, 131099, 2, 131100, 2, 131101, 2, 131102, 2, 131103, 2, 196608, 2, 196609, 2, 196610, 2, 196611, 2, 196612, 2, 196613, 2, 196614, 2, 196615, 2, 196616, 2, 196617, 2, 196618, 2, 196619, 2, 196620, 2, 196621, 2, 196622, 2, 196623, 2, 196624, 2, 196625, 2, 196626, 2, 196627, 2, 196628, 2, 196629, 2, 196630, 2, 196631, 2, 196632, 2, 196633, 2, 196634, 2, 196635, 2, 196636, 2, 196637, 2, 196638, 2, 196639, 2, 196640, 2, 262144, 2, 262145, 2, 262146, 2, 262147, 2, 262148, 2, 262149, 2, 262150, 2, 262151, 2, 262152, 2, 262153, 2, 262154, 2, 262155, 2, 262156, 2, 262157, 2, 262158, 2, 262159, 2, 262160, 2, 262161, 2, 262162, 2, 262163, 2, 262164, 2, 262165, 2, 262166, 2, 262167, 2, 262168, 2, 262169, 2, 262170, 2, 262171, 2, 262172, 2, 262173, 2, 262174, 2, 262175, 2, 327680, 2, 327681, 2, 327682, 2, 327683, 2, 327684, 2, 327685, 2, 327686, 2, 327687, 2, 327688, 2, 327689, 2, 327690, 2, 327691, 2, 327692, 2, 327693, 2, 327694, 2, 327695, 2, 327696, 2, 327697, 2, 327698, 2, 327699, 2, 327700, 2, 327701, 2, 327702, 2, 327703, 2, 327704, 2, 327705, 2, 327706, 2, 327707, 2, 327708, 2, 327709, 2, 327710, 2, 327711, 2, 393216, 2, 393217, 2, 393218, 2, 393219, 2, 393220, 2, 393221, 2, 393222, 2, 393223, 2, 393224, 2, 393225, 2, 393226, 2, 393227, 2, 393228, 2, 393229, 2, 393230, 2, 393231, 2, 393232, 2, 393233, 2, 393234, 2, 393235, 2, 393236, 2, 393237, 2, 393238, 2, 393239, 2, 393240, 2, 393241, 2, 393242, 2, 393243, 2, 393244, 2, 393245, 2, 393246, 2, 393247, 2, 458752, 2, 458753, 2, 458754, 2, 458755, 2, 458756, 2, 458757, 2, 458758, 2, 458759, 2, 458760, 2, 458761, 2, 458762, 2, 458763, 2, 458764, 2, 458765, 2, 458766, 2, 458767, 2, 458768, 2, 458769, 2, 458770, 2, 458771, 2, 458772, 2, 458773, 2, 458774, 2, 458775, 2, 458776, 2, 458777, 2, 458778, 2, 458779, 2, 458780, 2, 458781, 2, 458782, 2, 458783, 2, 524288, 2, 524289, 2, 524290, 2, 524291, 2, 524292, 2, 524293, 2, 524294, 2, 524295, 2, 524296, 2, 524297, 2, 524298, 2, 524299, 2, 524300, 2, 524301, 2, 524302, 2, 524303, 2, 524304, 2, 524305, 2, 524306, 2, 524307, 2, 524308, 2, 524309, 2, 524310, 2, 524311, 2, 524312, 2, 524313, 2, 524314, 2, 524315, 2, 524316, 2, 524317, 2, 524318, 2, 524319, 2, 589824, 2, 589825, 2, 589826, 2, 589827, 2, 589828, 2, 589829, 2, 589830, 2, 589831, 2, 589832, 2, 589833, 2, 589834, 2, 589835, 2, 589836, 2, 589837, 2, 589838, 2, 589839, 2, 589840, 2, 589841, 2, 589842, 2, 589843, 2, 589844, 2, 589845, 2, 589846, 2, 589847, 2, 589848, 2, 589849, 2, 589850, 2, 589851, 2, 589852, 2, 589853, 2, 589854, 2, 589855, 2, 655360, 2, 655361, 2, 655362, 2, 655363, 2, 655364, 2, 655365, 2, 655366, 2, 655367, 2, 655368, 2, 655369, 2, 655370, 2, 655371, 2, 655372, 2, 655373, 2, 655374, 2, 655375, 2, 655376, 2, 655377, 2, 655378, 2, 655379, 2, 655380, 2, 655381, 2, 655382, 2, 655383, 2, 655384, 2, 655385, 2, 655386, 2, 655387, 2, 655388, 2, 655389, 2, 655390, 2, 655391, 2, 720896, 2, 720897, 2, 720898, 2, 720899, 2, 720900, 2, 720901, 2, 720902, 2, 720903, 2, 720904, 2, 720905, 2, 720906, 2, 720907, 2, 720908, 2, 720909, 2, 720910, 2, 720911, 2, 720912, 2, 720913, 2, 720914, 2, 720915, 2, 720916, 2, 720917, 2, 720918, 2, 720919, 2, 720920, 2, 720921, 2, 720922, 2, 720923, 2, 720924, 2, 720925, 2, 720926, 2, 720927, 2, 786432, 2, 786433, 2, 786434, 2, 786435, 2, 786436, 2, 786437, 2, 786438, 2, 786439, 2, 786440, 2, 786441, 2, 786442, 2, 786443, 2, 786444, 2, 786445, 2, 786446, 2, 786447, 2, 786448, 2, 786449, 2, 786450, 2, 786451, 2, 786452, 2, 786453, 2, 786454, 2, 786455, 2, 786456, 2, 786457, 2, 786458, 2, 786459, 2, 786460, 2, 786461, 2, 786462, 2, 786463, 2, 851968, 2, 851969, 2, 851970, 2, 851971, 2, 851972, 2, 851973, 2, 851974, 2, 851975, 2, 851976, 2, 851977, 2, 851978, 2, 851979, 2, 851980, 2, 851981, 2, 851982, 2, 851983, 2, 851984, 2, 851985, 2, 851986, 2, 851987, 2, 851988, 2, 851989, 2, 851990, 2, 851991, 2, 851992, 2, 851993, 2, 851994, 2, 851995, 2, 851996, 2, 851997, 2, 851998, 2, 851999, 2, 917504, 2, 917505, 2, 917506, 2, 917507, 2, 917508, 2, 917509, 2, 917510, 2, 917511, 2, 917512, 2, 917513, 2, 917514, 2, 917515, 2, 917516, 2, 917517, 2, 917518, 2, 917519, 2, 917520, 2, 917521, 2, 917522, 2, 917523, 2, 917524, 2, 917525, 2, 917526, 2, 917527, 2, 917528, 2, 917529, 2, 917530, 2, 917531, 2, 917532, 2, 917533, 2, 917534, 2, 917535, 2, 983040, 2, 983041, 2, 983042, 2, 983043, 2, 983044, 2, 983045, 2, 983046, 2, 983047, 2, 983048, 2, 983049, 2, 983050, 2, 983051, 2, 983052, 2, 983053, 2, 983054, 2, 983055, 2, 983056, 2, 983057, 2, 983058, 2, 983059, 2, 983060, 2, 983061, 2, 983062, 2, 983063, 2, 983064, 2, 983065, 2, 983066, 2, 983067, 2, 983068, 2, 983069, 2, 983070, 2, 983071, 2, 1048576, 2, 1048577, 2, 1048578, 2, 1048579, 2, 1048580, 2, 1048581, 2, 1048582, 2, 1048583, 2, 1048584, 2, 1048585, 2, 1048586, 2, 1048587, 2, 1048588, 2, 1048589, 2, 1048590, 2, 1048591, 2, 1048592, 2, 1048593, 2, 1048594, 2, 1048595, 2, 1048596, 2, 1048597, 2, 1048598, 2, 1048599, 2, 1048600, 2, 1048601, 2, 1048602, 2, 1048603, 2, 1048604, 2, 1048605, 2, 1048606, 2, 1048607, 2, 1114112, 2, 1114113, 2, 1114114, 2, 1114115, 2, 1114116, 2, 1114117, 2, 1114118, 2, 1114119, 2, 1114120, 2, 1114121, 2, 1114122, 2, 1114123, 2, 1114124, 2, 1114125, 2, 1114126, 2, 1114127, 2, 1114128, 2, 1114129, 2, 1114130, 2, 1114131, 2, 1114132, 2, 1114133, 2, 1114134, 2, 1114135, 2, 1114136, 2, 1114137, 2, 1114138, 2, 1114139, 2, 1114140, 2, 1114141, 2, 1114142, 2, 1114143, 2, 1179648, 2, 1179649, 2, 1179650, 2, 1179651, 2, 1179652, 2, 1179653, 2, 1179654, 2, 1179655, 2, 1179656, 2, 1179657, 2, 1179658, 2, 1179659, 2, 1179660, 2, 1179661, 2, 1179662, 2, 1179663, 2, 1179664, 2, 1179665, 2, 1179666, 2, 1179667, 2, 1179668, 2, 1179669, 2, 1179670, 2, 1179671, 2, 1179672, 2, 1179673, 2, 1179674, 2, 1179675, 2, 1179676, 2, 1179677, 2, 1179678, 2, 1179679, 2, 1245184, 2, 1245185, 2, 1245186, 2, 1245187, 2, 1245188, 2, 1245189, 2, 1245190, 2, 1245191, 2, 1245192, 2, 1245193, 2, 1245194, 2, 1245195, 2, 1245196, 2, 1245197, 2, 1245198, 2, 1245199, 2, 1245200, 2, 1245201, 2, 1245202, 2, 1245203, 2, 1245204, 2, 1245205, 2, 1245206, 2, 1245207, 2, 1245208, 2, 1245209, 2, 1245210, 2, 1245211, 2, 1245212, 2, 1245213, 2, 1245214, 2, 1245215, 2, 1310720, 2, 1310721, 2, 1310722, 2, 1310723, 2, 1310724, 2, 1310725, 2, 1310726, 2, 1310727, 2, 1310728, 2, 1310729, 2, 1310730, 2, 1310731, 2, 1310732, 2, 1310733, 2, 1310734, 2, 1310735, 2, 1310736, 2, 1310737, 2, 1310738, 2, 1310739, 2, 1310740, 2, 1310741, 2, 1310742, 2, 1310743, 2, 1310744, 2, 1310745, 2, 1310746, 2, 1310747, 2, 1310748, 2, 1310749, 2, 1310750, 2, 1310751, 2, 1376256, 2, 1376257, 2, 1376258, 2, 1376259, 2, 1376260, 2, 1376261, 2, 1376262, 2, 1376263, 2, 1376264, 2, 1376265, 2, 1376266, 2, 1376267, 2, 1376268, 2, 1376269, 2, 1376270, 2, 1376271, 2, 1376272, 2, 1376273, 2, 1376274, 2, 1376275, 2, 1376276, 2, 1376277, 2, 1376278, 2, 1376279, 2, 1376280, 2, 1376281, 2, 1376282, 2, 1376283, 2, 1376284, 2, 1376285, 2, 1376286, 2, 1376287, 2, 1441792, 2, 1441793, 2, 1441794, 2, 1441795, 2, 1441796, 2, 1441797, 2, 1441798, 2, 1441799, 2, 1441800, 2, 1441801, 2, 1441802, 2, 1441803, 2, 1441804, 2, 1441805, 2, 1441806, 2, 1441807, 2, 1441808, 2, 1441809, 2, 1441810, 2, 1441811, 2, 1441812, 2, 1441813, 2, 1441814, 2, 1441815, 2, 1441816, 2, 1441817, 2, 1441818, 2, 1441819, 2, 1441820, 2, 1441821, 2, 1441822, 2, 1441823, 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="MapCursor" type="Sprite" parent="."]

visibility/opacity = 0.5
transform/pos = Vector2( 49.7021, -49.8891 )
texture = ExtResource( 3 )
centered = false

[node name="SimNode" type="Node2D" parent="."]

script/script = ExtResource( 4 )

[node name="UI" type="Panel" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1024.0
margin/top = 0.0
margin/right = 1279.0
margin/bottom = 720.0
script/script = ExtResource( 5 )

[node name="JudgeDialog" type="AcceptDialog" parent="UI"]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -1024.0
margin/top = 0.0
margin/right = -940.0
margin/bottom = 58.0
popup/exclusive = false
window/title = "Judgement"
dialog/hide_on_ok = true

[node name="PauseDialog" type="PopupDialog" parent="UI"]

editor/display_folded = true
visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -589.0
margin/top = 190.0
margin/right = -249.0
margin/bottom = 437.0
popup/exclusive = false

[node name="ButtonGroup" type="ButtonGroup" parent="UI/PauseDialog"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 90.0
margin/top = 43.0
margin/right = 250.0
margin/bottom = 202.0
alignment = 0

[node name="ResumeButton" type="Button" parent="UI/PauseDialog/ButtonGroup"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 3
margin/left = 0.0
margin/top = 0.0
margin/right = 160.0
margin/bottom = 53.0
toggle_mode = true
click_on_press = true
enabled_focus_mode = 0
shortcut = null
text = "Resume"
flat = false

[node name="ExitMenuButton" type="Button" parent="UI/PauseDialog/ButtonGroup"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 3
margin/left = 0.0
margin/top = 53.0
margin/right = 160.0
margin/bottom = 106.0
toggle_mode = true
click_on_press = true
enabled_focus_mode = 0
shortcut = null
text = "Quit To Menu"
flat = false

[node name="ExitDesktopButton" type="Button" parent="UI/PauseDialog/ButtonGroup"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 3
margin/left = 0.0
margin/top = 106.0
margin/right = 160.0
margin/bottom = 159.0
toggle_mode = true
click_on_press = true
enabled_focus_mode = 0
shortcut = null
text = "Quit To Desktop"
flat = false

[node name="DateLabel" type="Label" parent="UI"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 10.0
margin/top = 10.0
margin/right = 246.0
margin/bottom = 41.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "[TIME]"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="MoneyLabel" type="Label" parent="UI"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 10.0
margin/top = 41.0
margin/right = 246.0
margin/bottom = 72.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "$25"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="RatingLabel" type="Label" parent="UI"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 10.0
margin/top = 71.0
margin/right = 246.0
margin/bottom = 102.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Rating: 10.0"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="TileLabel" type="Label" parent="UI"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 10.0
margin/top = 102.0
margin/right = 246.0
margin/bottom = 185.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "(5,10)
Dirt
"
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="NormalButton" type="Button" parent="UI"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 10.0
margin/top = 690.0
margin/right = 69.0
margin/bottom = 710.0
toggle_mode = false
click_on_press = true
enabled_focus_mode = 0
shortcut = null
text = "Normal"
flat = false

[node name="FastButton" type="Button" parent="UI"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 94.0
margin/top = 690.0
margin/right = 153.0
margin/bottom = 710.0
toggle_mode = false
click_on_press = true
enabled_focus_mode = 0
shortcut = null
text = "Fast"
flat = false

[node name="PauseButton" type="Button" parent="UI"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 180.0
margin/top = 690.0
margin/right = 239.0
margin/bottom = 710.0
toggle_mode = false
click_on_press = true
enabled_focus_mode = 0
shortcut = null
text = "Pause"
flat = false

[node name="Menu" type="VButtonArray" parent="UI"]

anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 12.0
margin/top = 192.0
margin/right = 8.0
margin/bottom = 377.0
custom_constants/button_separator = 13
flat = true
button/count = 4
button/min_button_size = -1.0
button/align = 4
button/0/text = "Dig"
button/0/tooltip = "Remove top layer of plants and grass down to dirt"
button/0/icon = null
button/1/text = "Construct"
button/1/tooltip = "Lay tiles, plant plants, lay grass, etc"
button/1/icon = null
button/2/text = "Jobs"
button/2/tooltip = "Hire people to do jobs you don't want to!"
button/2/icon = null
button/3/text = "Mow Lawn"
button/3/tooltip = "Chop down that unslightly tall grass"
button/3/icon = null
button/selected = 0

[node name="ConstructionMenu" type="VButtonArray" parent="UI"]

visibility/visible = false
anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 12.0
margin/top = 395.0
margin/right = 8.0
margin/bottom = 613.0
custom_constants/button_separator = 13
flat = true
button/count = 7
button/min_button_size = -1.0
button/align = 4
button/0/text = "Path ($5)"
button/0/tooltip = ""
button/0/icon = null
button/1/text = "Fence ($2)"
button/1/tooltip = ""
button/1/icon = null
button/2/text = "Roses ($5)"
button/2/tooltip = ""
button/2/icon = null
button/3/text = "Dafodils ($5)"
button/3/tooltip = ""
button/3/icon = null
button/4/text = "Orchids ($10)"
button/4/tooltip = ""
button/4/icon = null
button/5/text = "Grass ($2)"
button/5/tooltip = ""
button/5/icon = null
button/6/text = "Fill pond with dirt ($1)"
button/6/tooltip = ""
button/6/icon = null
button/selected = 0

[node name="JobMenu" type="VButtonArray" parent="UI"]

visibility/visible = false
anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 12.0
margin/top = 395.0
margin/right = 8.0
margin/bottom = 501.0
custom_constants/button_separator = 13
flat = true
button/count = 2
button/min_button_size = -1.0
button/align = 4
button/0/text = "None"
button/0/tooltip = ""
button/0/icon = null
button/1/text = "Lawn Mower ($5/hour)"
button/1/tooltip = ""
button/1/icon = null
button/selected = 0

[connection signal="button_up" from="UI/NormalButton" to="UI" method="_on_NormalButton_button_up"]

[connection signal="button_up" from="UI/FastButton" to="UI" method="_on_FastButton_button_up"]

[connection signal="button_up" from="UI/PauseButton" to="UI" method="_on_PauseButton_button_up"]


